import fix for overflowing data. icons for badges
--HG--
branch : next-default

--- a/app/themes/default/less/configuration.less
+++ b/app/themes/default/less/configuration.less
@@ -930,7 +930,9 @@ table.configuration-list{
 		border-bottom:1px solid #DFDFDF;
 	}
 	.column-import-data{
+		padding-right: 5px;
 		margin-top: 5px;
+		word-break: break-all;
 	}
 	tr td:last-child{
 		padding-right:0;
