--- a/app/themes/default/less/icons.less
+++ b/app/themes/default/less/icons.less
@@ -217,6 +217,10 @@ i[class^="icon"]{
 	content:'\20AC';
 }
 
+.icon-gamification:after{
+	content:'\2202';
+}
+
 .icon-by-time-workflow-in-queues:after{
 	content:'\0071';
 	font-size:28px;
